force-app/main/default/objects/Govt_Funds__c/Govt_Funds__c.object-meta.xml
<CustomObject>
    <description>Government bills and  Personal amount will loaded</description>
    <label>Govt Funds</label>
    <nameField>
        <label>Funds Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Govt Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>