force-app/main/default/objects/Govt_Funds__c/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>