force-app/main/default/objects/Govt_Funds__c/fields/FUNDING__c.field-meta.xml
<CustomField>
    <fullName>FUNDING__c</fullName>
    <label>FUNDING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pratap</fullName>
            </value>
            <value>
                <fullName>Govt</fullName>
            </value>
            <value>
                <fullName>Subramanyam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>