force-app/main/default/objects/Govt_Funds__c/fields/Out_Standing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Out_Standing_Amount__c</fullName>
    <formula>Billed_Amount__c -  TotalContractsAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Standing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>