force-app/main/default/objects/Govt_Funds__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M-Book created</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>First Signature</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>SE_Reviewed</fullName>
            </value>
            <value>
                <fullName>AE_Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>