force-app/main/default/objects/Govt_Funds__c/fields/TotalContractsAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalContractsAmt__c</fullName>
    <label>Total Contracts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>